--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
 certifi==2021.10.8
 charset-normalizer==2.0.7
+cycler==0.10.0
 DateTime==4.3
 dgl-cu102==0.7.1
 idna==3.3
 joblib==1.1.0
+kiwisolver==1.3.2
+littleutils==0.2.2
+matplotlib==3.4.3
 networkx==2.6.3
 numpy==1.21.3
+ogb==1.3.2
+outdated==0.2.1
 pandas==1.3.4
 Pillow==8.4.0
+pyparsing==3.0.1
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
@@ -16,6 +23,7 @@ scipy==1.7.1
 six==1.16.0
 threadpoolctl==3.0.0
 torch==1.7.1
+torch-sparse==0.6.12
 torchaudio==0.7.2
 torchvision==0.8.2
 tqdm==4.62.3
